# chess-minimax

./: .gitignore  .rustfmt.toml  Cargo.toml  Gemfile  README.md  _config.yml  index.html  random.html  shell.nix  v0.md  v1.md  v2-draft.md
_layouts/: default.html
src/: board.rs  input.rs  lib.rs  main.rs  minimax.rs  piece.rs  prelude.rs  search.rs  serialize.rs  terminal.rs  ws.rs
src/utils/: mod.rs  stackvec.rs
