[package]
name = "chess-minimax"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
# Binary dependencies
rustyline = { version = "2.1.0", optional = true }
termion = { version = "1.5.1", optional = true }

[features]
bin = ["rustyline", "termion"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["bin"]
