[package]
name = "chess-minimax"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
# Binary dependencies
rustyline = { version = "2.1.0", optional = true }
termion = { version = "1.5.1", optional = true }
gdk = { version = "0.9.0", optional = true }
gdk-pixbuf = { version = "0.5.0", optional = true }
gtk = { version = "0.5.0", optional = true }

[features]
threads = []
terminal-bin-min = ["rustyline", "termion"]
terminal-bin = ["terminal-bin-min", "threads"]
gtk-bin = ["gdk", "gdk-pixbuf", "gtk"]

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"
required-features = ["terminal-bin"]

[[bin]]
name = "gtk"
path = "src/bin/gtk.rs"
required-features = ["gtk-bin"]
